--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 
 					<div class="works-item">
 						<div class="works-img">
-							<img src="images/スクリーンショット (3)-min.jpg" alt="Works"></img>
+							<a href="https://yoppei0818.github.io/sample_practice/"><img src="images/スクリーンショット (6).png" alt="Works"></img></a>
 						</div>
-						<p>URL：制作中</p>
-						<p>使用ツール：<br><span>HTML5/CSS3/PHP</span></p>
+						<p>URL：<a href="https://yoppei0818.github.io/sample_practice/">https://yoppei0818.github.io/sample_practice/</a></p>
+						<p>使用ツール：<br><span>HTML5/CSS3/javascript/adobe XD</span></p>
 					</div>
 				</div>
 			</div>
