--- a/index.html
+++ b/index.html
@@ -83,19 +83,20 @@
 											<li>簡単なWebアプリ作成</li>
 											<li>jQueryの使用。</li>
 											<li>スムーススクロールや<br>スライドショーなど。</li>
-											<li>Web APIを勉強中。</li>
+											<li>フレームワーク（Vue.js、Nuxt.js）でのサイト、アプリ作成。</li>
 									</ul>
 							 </div>
 
 								<div class="skills-item">
 									<div class="icon">
-										<i class="fab fa-php"></i>
+										<i class="fas fa-code"></i>
 									</div>
-									<h3>PHP</h3>
+									<h3>サーバーサイド</h3>
 									<p>できること</p>
 									<ul>
 											<li>PHPの基本的な操作。<br>(Progateの内容)</li>
-											<li>掲示板のWebアプリを制作中。</li>
+											<li>MySQLの基本的な操作。<br>(Progateの内容)</li>
+											<li>Firebaseの使用。(Authentication、RDB)</li>
 									</ul>
 							 </div>
 
@@ -126,9 +127,9 @@
 						<div class="works-img">
 							<a href=" https://yoppei0818.github.io/oz_website/."><img src="images/スクリーンショット (1)-min.jpg" alt="Works"></img></a>
 						</div>
+						<p class="title">所属サークルHP</p>
 						<p>URL：<br><a href=" https://yoppei0818.github.io/oz_website/."> https://yoppei0818.github.io/oz_website/.</a></p>
 						<p>使用ツール：<span>HTML5/CSS3/javascript/photoshop/Adobe XD</span></p>
-						<p></p>
 					</div>
 
 					<div class="works-item">
@@ -143,12 +144,14 @@
 						<div class="works-img">
 							<a href="https://yoppei0818.github.io/sample_practice/"><img src="images/スクリーンショット (6).png" alt="Works"></img></a>
 						</div>
+						<p class="title">コーポレートサイトサンプル</p>
 						<p>URL：<a href="https://yoppei0818.github.io/sample_practice/">https://yoppei0818.github.io/sample_practice/</a></p>
 						<p>使用ツール：<br><span>HTML5/CSS3/javascript/adobe XD</span></p>
 					</div>
 				</div>
 			</div>
 		</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="portfolio.js"></script>
 </body>
