--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<div class="works-items">
 					<div class="works-item">
 						<div class="works-img">
-							<a href=" https://yoppei0818.github.io/oz_website/."><img src="images/スクリーンショット (1)-min.jpg" alt="Works"></img></a>
+							<a href=" https://yoppei0818.github.io/oz_website/."><img src="images/スクリーンショット (12)-min.jpg" alt="Works"></img></a>
 						</div>
 						<p class="title">所属サークルHP</p>
 						<p>URL：<br><a href=" https://yoppei0818.github.io/oz_website/."> https://yoppei0818.github.io/oz_website/.</a></p>
@@ -147,6 +147,15 @@
 						<p class="title">コーポレートサイトサンプル</p>
 						<p>URL：<a href="https://yoppei0818.github.io/sample_practice/">https://yoppei0818.github.io/sample_practice/</a></p>
 						<p>使用ツール：<br><span>HTML5/CSS3/javascript/adobe XD</span></p>
+					</div>
+	
+					<div class="works-item">
+						<div class="works-img">
+							<a href="https://yoppei0818.github.io/weather-app/"><img src="images/スクリーンショット (10)-min.jpg" alt="Works"></img></a>
+						</div>
+						<p class="title">天気アプリケーション</p>
+						<p>URL：<a href="https://yoppei0818.github.io/weather-app/">https://yoppei0818.github.io/weather-app/</a></p>
+						<p>使用ツール：<br><span>HTML5/CSS3/Vue/Weather API</span></p>
 					</div>
 				</div>
 			</div>
